--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^8.0.1",
+    "firebase-tools": "^8.15.1",
     "framer-motion": "^2.9.4",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
